# cpp-examples

./: .gitignore  README.md
BowlingGame/: CMakeLists.txt  Makefile  main.cpp
BowlingGame/sources/: Game.cpp  Game.hpp  Roll.cpp  Roll.hpp
BowlingGame/tests/: Example.cpp  Example.hpp  TestExampleTest.h
